--- a/labMedical/src/app/components/side-menu/side-menu.component.html
+++ b/labMedical/src/app/components/side-menu/side-menu.component.html
@@ -1,4 +1,4 @@
-<div class="collapse collapse-horizontal h-100" id="collapseWidthExample">
+<div class="collapse collapse-horizontal h-100" id="sideMenu">
     <div class="d-flex flex-column bg-dark text-center text-white p-4" style="height:100%;width: 15rem;">
         <!-- <div class="d-flex container flex-column text-white"> -->
         <p>
