--- a/labMedical/src/app/components/toolbar/toolbar.component.html
+++ b/labMedical/src/app/components/toolbar/toolbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-dark bg-dark">
     <div class="container-fluid">
         <button class="btn navbar-toggler-icon" type="button" data-bs-toggle="collapse"
-            data-bs-target="#collapseWidthExample" aria-expanded="false" aria-controls="collapseWidthExample">
+            data-bs-target="#sideMenu" aria-expanded="false" aria-controls="sideMenu">
 
         </button>
         <p class="navbar-brand" href="#">
