Navegação por Rota

--- a/labMedical/src/app/components/side-menu/side-menu.component.html
+++ b/labMedical/src/app/components/side-menu/side-menu.component.html
@@ -5,15 +5,15 @@
             Geral
         </p>
         <!-- <div class="d-flex flex-column"> -->
-            <button class="btn btn-outline-primary mb-3 active">Home</button>
-            <button class="btn btn-outline-primary mb-3">Botao</button>
+        <button class="btn btn-outline-primary mb-3" routerLink="inicio" routerLinkActive="selected">Início</button>
+        <button class="btn btn-outline-primary mb-3" routerLink="paciente" routerLinkActive="selected">Cadastro de
+            Pacientes</button>
         <!-- </div> -->
         <!-- <div class="text-white text-center mb-5"> -->
-        <p>
-            Seção
-        </p>
-        <button class="btn btn-outline-primary mb-3">Botao</button>
-        <button class="btn btn-outline-primary mb-3">Botao</button>
+
+        <button class="btn btn-outline-primary mb-3" routerLink="consulta" routerLinkActive="selected">Cadastro de Consulta</button>
+        <button class="btn btn-outline-primary mb-3" routerLink="exame" routerLinkActive="selected">Cadastro de
+            Exames</button>
         <!-- </div> -->
         <!-- </div> -->
     </div>
