--- a/labMedical/src/app/app.component.html
+++ b/labMedical/src/app/app.component.html
@@ -1,3 +1,9 @@
-
 <router-outlet></router-outlet>
 
+
+<!--    
+    loading template
+        <div *ngIf="!loading">
+            <span>loading false</span>
+            <ng-container *ngTemplateOutlet="template"></ng-container>
+        </div> -->
