--- a/labMedical/src/app/pages/login/login.component.html
+++ b/labMedical/src/app/pages/login/login.component.html
@@ -3,12 +3,12 @@
         <div class="card-header">
             <ul class="nav nav-tabs card-header-tabs d-flex justify-content-between">
                 <li class="nav-item">
-                    <a class="nav-link" (click)="status='login'" [ngClass]="{'active':status=='login'}"
-                        aria-current="true" href="#">Login</a>
+                    <button class="nav-link" (click)="status='login'" [ngClass]="{'active':status=='login'}"
+                        aria-current="true" >Login</button>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" (click)="status='registro'" [ngClass]="{'active':status=='registro'}"
-                        href="#">Registro</a>
+                    <button class="nav-link" (click)="status='registro'"
+                        [ngClass]="{'active':status=='registro'}" >Registro</button>
                 </li>
             </ul>
         </div>
