--- a/labMedical/src/app/pages/main/main.component.html
+++ b/labMedical/src/app/pages/main/main.component.html
@@ -1,11 +1,7 @@
 <body>
     <labM-toolbar></labM-toolbar>
-    <!-- <router-outlet></router-outlet> -->
     <div class="d-flex">
         <labM-side-menu style="height:100vh"></labM-side-menu>
-        <labM-inicio style="width:100%"></labM-inicio>
-        <!-- <labM-paciente-cadastro style="width:100%"></labM-paciente-cadastro> -->
-        <!-- <labM-consulta-cadastro style="width:100%"></labM-consulta-cadastro> -->
-        <!-- <labM-exame-cadastro style="width:100%"></labM-exame-cadastro> -->
+        <router-outlet></router-outlet>
     </div>
 </body>
