--- a/labMedical/src/app/pages/paciente-cadastro/paciente-cadastro.component.html
+++ b/labMedical/src/app/pages/paciente-cadastro/paciente-cadastro.component.html
@@ -203,7 +203,11 @@
             </div>
         </section>
         <div class="d-flex justify-content-between">
-            <button type="submit" class="btn btn-primary" [disabled]="!cadastroPaciente.valid">Confirmar</button>
+            <div class="d-flex gap-2">
+                <button type="submit" class="btn btn-primary" [disabled]="!cadastroPaciente.valid">Confirmar</button>
+                <button type="button" class="btn btn-primary" [disabled]="">Editar</button>
+                <button type="button" class="btn btn-primary" [disabled]="">Deletar</button>
+            </div>
             <button type="reset" class="btn btn-primary">Limpar</button>
         </div>
     </div>
