Editar da Página Cadastro de Paciente

--- a/labMedical/src/app/components/paciente-card/paciente-card.component.html
+++ b/labMedical/src/app/components/paciente-card/paciente-card.component.html
@@ -5,10 +5,10 @@
     </div>
     <div class="card-body text-center">
         <p>{{paciente.dataNascimento|idade}}</p>
-        <p>{{paciente.email?paciente.email:paciente.telefone}}</p> <!-- ngIf email else telefone -->
+        <p>{{paciente.email?paciente.email:paciente.telefone}}</p>
         <p>{{paciente.convenio?paciente.convenio:"Sem Convênio"}}</p>
     </div>
     <div class="card-footer text-end">
-        <button class="btn btn-link">Info</button> <!-- cartão inteiro -->
+        <button class="btn btn-link" [routerLink]="['../paciente',paciente.id]">Info</button> <!-- cartão inteiro -->
     </div>
 </div>
