--- a/labMedical/src/app/pages/main/main.component.html
+++ b/labMedical/src/app/pages/main/main.component.html
@@ -2,6 +2,8 @@
     <labM-toolbar></labM-toolbar>
     <div class="d-flex">
         <labM-side-menu style="height:100vh"></labM-side-menu>
-        <router-outlet></router-outlet>
+        <section style="width:100%">
+            <router-outlet></router-outlet>
+        </section>
     </div>
 </body>
