--- a/labMedical/src/app/pages/inicio/inicio.component.html
+++ b/labMedical/src/app/pages/inicio/inicio.component.html
@@ -9,12 +9,7 @@
     </div>
 </div>
 <!-- busca de pacientes -->
-<div class="input-group p-4">
-    <button class="btn btn-outline-primary disabled" type="button" id="button-addon2">Pesquisar</button>
-    <input name="pesquisa" type="text" class="form-control" placeholder="Nome, Telefone ou E-mail" aria-label="Nome, Telefone ou E-mail"
-        aria-describedby="button-addon2" (keyup)="filtrar()" [(ngModel)]="pesquisa">
-</div>
-
+<labM-barra-pesquisa (listaPacientes)="recebedorEvento($event)"></labM-barra-pesquisa>
 <!-- lista de pacientes -->
 <ul class="d-flex justify-content-around p-4 flex-wrap">
     <labM-paciente-card [paciente]="paciente" *ngFor="let paciente of pacientes"></labM-paciente-card>
