--- a/labMedical/src/app/pages/paciente-cadastro/paciente-cadastro.component.html
+++ b/labMedical/src/app/pages/paciente-cadastro/paciente-cadastro.component.html
@@ -1,7 +1,8 @@
 <form #cadastroPaciente="ngForm" (ngSubmit)="onSubmit(cadastroPaciente,$event.submitter.id)" class="container p-3 mt-3 border">
     <div class="d-flex flex-column justify-content-center">
         <!-- mostar nome no editar -->
-        <h3 class="text-center mb-3">Paciente</h3>
+        <h3 class="text-center">Paciente</h3>
+        <hr>
         <h5>Identificação</h5>
 
         <section class="mb-3 form-group d-flex gap-3">
