Página de Listagem de Prontuários

--- a/labMedical/src/app/components/side-menu/side-menu.component.html
+++ b/labMedical/src/app/components/side-menu/side-menu.component.html
@@ -16,5 +16,6 @@
             Exames</button>
         <!-- </div> -->
         <!-- </div> -->
+        <button class="btn btn-outline-primary mb-3" routerLink="prontuarios" routerLinkActive="selected">Lista de Prontuários</button>
     </div>
 </div>
