--- a/labMedical/src/app/pages/prontuario-lista/prontuario-lista.component.html
+++ b/labMedical/src/app/pages/prontuario-lista/prontuario-lista.component.html
@@ -1,5 +1,8 @@
-<labM-barra-pesquisa (listaPacientes)="recebedorEvento($event)"></labM-barra-pesquisa>
-<!-- lista de pacientes -->
-<ul class="d-flex flex-column justify-content-around p-4">
-    <labM-paciente-card [paciente]="paciente" *ngFor="let paciente of pacientes"></labM-paciente-card>
-</ul>
+<div class="container">
+    <labM-barra-pesquisa (listaPacientes)="recebedorEvento($event)"></labM-barra-pesquisa>
+    <!-- lista de pacientes -->
+    <labM-prontuario-table [pacientes]="pacientes"></labM-prontuario-table>
+</div>
+
+
+
