Edição de Consultas na Página de Consultas

--- a/labMedical/src/app/components/prontuario-table/prontuario-table.component.html
+++ b/labMedical/src/app/components/prontuario-table/prontuario-table.component.html
@@ -4,14 +4,15 @@
             <th scope="col">Registro</th>
             <th scope="col">Nome do Paciente</th>
             <th scope="col">Convênio</th>
+            <th></th>
         </tr>
     </thead>
     <tbody>
         <tr *ngFor="let paciente of pacientes">
-            <th scope="row">{{paciente.id}}</th>
+            <td>{{paciente.id}}</td>
             <td>{{paciente.nome}}</td>
             <td>{{paciente.convenio?paciente.convenio:"Não Possui"}}</td>
-            <button class="btn btn-outline-primary link" [routerLink]="['../prontuario',paciente.id]">Ver Mais</button>
+            <td><button class="btn btn-outline-primary link" [routerLink]="['../prontuario',paciente.id]">Ver Mais</button></td>
         </tr>
     </tbody>
 </table>
