Mudança Dinâmica de Nome de Página na ToolBar

--- a/labMedical/src/app/components/toolbar/toolbar.component.html
+++ b/labMedical/src/app/components/toolbar/toolbar.component.html
@@ -5,7 +5,7 @@
 
         </button>
         <p class="navbar-brand" href="#">
-            Nome da Página
+            {{nomePagina}}
         </p>
         <div class="d-flex nav-text text-white">
             <p>
