--- a/labMedical/src/app/components/paciente-card/paciente-card.component.html
+++ b/labMedical/src/app/components/paciente-card/paciente-card.component.html
@@ -1,14 +1,14 @@
-<div class="card" style="width: 12rem;">
-    <div class="card-header text-center">
+<div class="card border border-primary"  style="width: 12rem;">
+    <button [routerLink]="['../paciente',paciente.id]" class="btn btn-primary border border-primary card-header text-center">
         <img>
         <label>{{paciente.nome}}</label>
-    </div>
+    </button>
     <div class="card-body text-center">
-        <p>{{paciente.dataNascimento|idade}}</p>
+        <p>{{paciente.dataNascimento|idade}} Anos</p>
         <p>{{paciente.email?paciente.email:paciente.telefone}}</p>
         <p>{{paciente.convenio?paciente.convenio:"Sem Convênio"}}</p>
     </div>
     <div class="card-footer text-end">
-        <button class="btn btn-link" [routerLink]="['../paciente',paciente.id]">Info</button> <!-- cartão inteiro -->
+        <button class="btn btn-link" [routerLink]="['../paciente',paciente.id]">Editar</button> <!-- cartão inteiro -->
     </div>
 </div>
