--- a/labMedical/src/app/pages/inicio/inicio.component.html
+++ b/labMedical/src/app/pages/inicio/inicio.component.html
@@ -1,7 +1,7 @@
 <!-- estatísticas -->
 <div class="d-flex justify-content-around p-4 flex-wrap">
-    <div *ngFor="let estatistica of estatisticas;" class="card" style="width: 12rem;">
-        <img src={{estatistica.img}} class="card-img-top" alt="...">
+    <div *ngFor="let estatistica of estatisticas;" class="card border-white" style="width: 12rem;">
+        <img src={{estatistica.img}} class="card-img-top container mt-5" alt="...">
         <div class="card-body row text-center">
             <p class="card-text">{{estatistica.nome}}</p>
             <span>{{estatistica.quantidade}}</span>
@@ -11,6 +11,6 @@
 <!-- busca de pacientes -->
 <labM-barra-pesquisa (listaPacientes)="recebedorEvento($event)"></labM-barra-pesquisa>
 <!-- lista de pacientes -->
-<ul class="d-flex justify-content-around p-4 flex-wrap">
+<ul class="d-flex justify-content-around p-4 flex-wrap gap-3">
     <labM-paciente-card [paciente]="paciente" *ngFor="let paciente of pacientes"></labM-paciente-card>
 </ul>
