--- a/labMedical/src/app/components/side-menu/side-menu.component.html
+++ b/labMedical/src/app/components/side-menu/side-menu.component.html
@@ -2,20 +2,27 @@
     <div class="d-flex flex-column bg-dark text-center text-white p-4" style="height:100%;width: 15rem;">
         <!-- <div class="d-flex container flex-column text-white"> -->
         <p>
-            Geral
+            Navegação
         </p>
-        <!-- <div class="d-flex flex-column"> -->
-        <button class="btn btn-outline-primary mb-3" routerLink="inicio" routerLinkActive="selected">Início</button>
-        <button class="btn btn-outline-primary mb-3" routerLink="paciente" routerLinkActive="selected">Cadastro de
-            Pacientes</button>
-        <!-- </div> -->
-        <!-- <div class="text-white text-center mb-5"> -->
+        <nav class="d-flex flex-column flex-grow-1">
+            <!-- <div class="d-flex flex-column"> -->
+            <button class="btn btn-outline-primary mb-3" routerLink="inicio" routerLinkActive="selected">Início</button>
+            <button class="btn btn-outline-primary mb-3" routerLink="paciente" routerLinkActive="selected">Cadastro de
+                Pacientes</button>
+            <!-- </div> -->
+            <!-- <div class="text-white text-center mb-5"> -->
 
-        <button class="btn btn-outline-primary mb-3" routerLink="consulta" routerLinkActive="selected">Cadastro de Consulta</button>
-        <button class="btn btn-outline-primary mb-3" routerLink="exame" routerLinkActive="selected">Cadastro de
-            Exames</button>
-        <!-- </div> -->
-        <!-- </div> -->
-        <button class="btn btn-outline-primary mb-3" routerLink="prontuarios" routerLinkActive="selected">Lista de Prontuários</button>
+            <button class="btn btn-outline-primary mb-3" routerLink="consulta" routerLinkActive="selected">Cadastro de
+                Consulta</button>
+            <button class="btn btn-outline-primary mb-3" routerLink="exame" routerLinkActive="selected">Cadastro de
+                Exames</button>
+            <!-- </div> -->
+            <!-- </div> -->
+            <button class="btn btn-outline-primary mb-3" routerLink="prontuarios" routerLinkActive="selected">Lista de
+                Prontuários</button>
+        </nav>
+        <div>
+            <img src="../../../assets/logo.svg">
+        </div>
     </div>
 </div>
