--- a/labMedical/src/styles.css
+++ b/labMedical/src/styles.css
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+input[required],select[required],textarea[required]{
+    background-image: radial-gradient(#F00 15%, transparent 16%), radial-gradient(#F00 15%, transparent 16%);
+    background-size: 1em 1em;
+    background-position: right top;
+    background-repeat: no-repeat;
+}
+.alert{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 2rem;
+}
