--- a/labMedical/src/app/pages/exame-cadastro/exame-cadastro.component.html
+++ b/labMedical/src/app/pages/exame-cadastro/exame-cadastro.component.html
@@ -87,7 +87,7 @@
                 <button id="deletar" type="submit" class="btn btn-primary"
                     [disabled]="controle!='editar'">Deletar</button>
             </div>
-            <button type="reset" class="btn btn-primary">Limpar</button>
+            <button type="reset" (click)="formReset()" class="btn btn-primary">Limpar</button>
         </div>
     </div>
 </form>
