--- a/labMedical/src/app/components/prontuario-table/prontuario-table.component.html
+++ b/labMedical/src/app/components/prontuario-table/prontuario-table.component.html
@@ -1,4 +1,4 @@
-<table class="table border">
+<table class="table border border-primary">
     <thead>
         <tr>
             <th scope="col">Registro</th>
