--- a/labMedical/src/app/components/prontuario-table/prontuario-table.component.html
+++ b/labMedical/src/app/components/prontuario-table/prontuario-table.component.html
@@ -9,9 +9,9 @@
     </thead>
     <tbody>
         <tr *ngFor="let paciente of pacientes">
-            <td>{{paciente.id}}</td>
-            <td>{{paciente.nome}}</td>
-            <td>{{paciente.convenio?paciente.convenio:"Não Possui"}}</td>
+            <td class="col-3">{{paciente.id}}</td>
+            <td class="col-6">{{paciente.nome}}</td>
+            <td class="col-3">{{paciente.convenio?paciente.convenio:"Não Possui"}}</td>
             <td><button class="btn btn-outline-primary link" [routerLink]="['../prontuario',paciente.id]">Ver Mais</button></td>
         </tr>
     </tbody>
