CSS de Página Main

--- a/labMedical/src/app/pages/main/main.component.html
+++ b/labMedical/src/app/pages/main/main.component.html
@@ -1,9 +1,9 @@
-<body>
-    <labM-toolbar></labM-toolbar>
-    <div class="d-flex">
-        <labM-side-menu style="height:100vh"></labM-side-menu>
-        <section style="width:100%">
+<labM-toolbar></labM-toolbar>
+<div class="d-flex">
+    <labM-side-menu class="sidebar"></labM-side-menu>
+    <div class="content-container">
+        <div class="content">
             <router-outlet></router-outlet>
-        </section>
+        </div>
     </div>
-</body>
+</div>
