--- a/labMedical/src/app/pages/prontuario/prontuario.component.html
+++ b/labMedical/src/app/pages/prontuario/prontuario.component.html
@@ -7,9 +7,9 @@
         </div>
         <div class="d-flex flex-grow-1 flex-column align-items-end">
             <h5>Alergias</h5>
-            <p>{{paciente?.alergias}}</p>
+            <p>{{paciente?.alergias?paciente?.alergias:"Nenhuma"}}</p>
             <h5>Necessidades Especiais</h5>
-            <p>{{paciente?.cuidados}}</p>
+            <p>{{paciente?.cuidados?paciente?.cuidados:"Nenhuma"}}</p>
         </div>
     </section>
     <section class="mt-3">
@@ -20,7 +20,7 @@
         <div *ngIf="consultas?.length;else templateConsulta">
             <div *ngFor="let consulta of consultas" class="mb-3 border border-dark">
                 <section class="d-flex border-bottom border-dark">
-                    <div class="badge bg-dark rounded-0 d-flex flex-column justify-content-center" style="min-width:10rem">
+                    <div class="badge bg-secondary rounded-0 d-flex flex-column justify-content-center" style="min-width:10rem">
                         <h5>Data e Hora</h5>
                         <p>{{consulta.dataConsulta}}</p>
                         <p>{{consulta.horaConsulta}}</p>
@@ -53,11 +53,11 @@
 
     <section>
         <h1>Exames</h1>
-        <ng-template #templateExame> Sem Exames cadastrados</ng-template>
-        <div *ngIf="exames?.length;else templateConsulta" class="border">
+        <ng-template #templateExame> <h2>Sem Exames cadastrados</h2></ng-template>
+        <div *ngIf="exames?.length;else templateExame" class="border">
             <div *ngFor="let exame of exames" class="mb-3 border border-dark">
                 <section class="d-flex border-dark">
-                    <div class="badge bg-dark rounded-0 d-flex flex-column justify-content-center" style="min-width:10rem">
+                    <div class="badge bg-secondary rounded-0 d-flex flex-column justify-content-center" style="min-width:10rem">
                         <h5>Data e Hora</h5>
                         <p>{{exame.dataExame}}</p>
                         <p>{{exame.horaExame}}</p>
@@ -73,6 +73,8 @@
                             <p class="text-wrap">{{exame.resultados}}</p>
                         </div>
                     </div>
+                    <button class="btn btn-outline-primary rounded-0 link"
+                        [routerLink]="['/home/exame',exame.idPaciente]">Editar</button>
                 </section>
             </div>
         </div>
