--- a/labMedical/src/app/components/login-cadastro/login-cadastro.component.html
+++ b/labMedical/src/app/components/login-cadastro/login-cadastro.component.html
@@ -18,27 +18,25 @@
             <div *ngIf="inputEmail.errors?.['availableEmail']&&inputEmail.touched" class="alert alert-danger">
                 Email Indisponível</div>
         </div>
-        <div class="mb-3 form-group">
-            <label for="senhaCadastro" class="form-label">Senha</label>
-            <input #inputSenha="ngModel" type="password" class="form-control" name="senhaCadastro" [(ngModel)]="senha"
-                required labMMatchingPassword value="" [senha]="inputConfirmarSenha.value" minlength="8"
-                placeholder="Mínimo de 8 caracteres">
-            <div *ngIf="inputSenha.errors?.['required']&&inputSenha.touched" class="alert alert-danger">
-                Campo Obrigatório</div>
-            <div *ngIf="inputSenha.errors?.['minlength']&&inputSenha.touched" class="alert alert-danger">
-                Mínimo de 8 caracteres</div>
+        <div ngModelGroup="senhas" #checkSenhas="ngModelGroup" labMMatchingPassword>
+            <div class="mb-3 form-group">
+                <label for="senhaCadastro" class="form-label">Senha</label>
+                <input #inputSenha="ngModel" type="password" class="form-control" name="senhaCadastro"
+                    [(ngModel)]="senha" required minlength="8" placeholder="Mínimo de 8 caracteres">
+                <div *ngIf="inputSenha.errors?.['required']&&inputSenha.touched" class="alert alert-danger">
+                    Campo Obrigatório</div>
+                <div *ngIf="inputSenha.errors?.['minlength']&&inputSenha.touched" class="alert alert-danger">
+                    Mínimo de 8 caracteres</div>
+            </div>
+            <div class="mb-3 form-group">
+                <label for="senhaValida" class="form-label">Confirmar Senha</label>
+                <input #inputConfirmarSenha="ngModel" type="password" class="form-control" name="senhaValida"
+                    placeholder="Insira a senha novamente" [(ngModel)]="confirmarSenha" required>
+            </div>
+            <div *ngIf="checkSenhas.errors?.['matchingPassword']&&inputConfirmarSenha.touched&&inputSenha.touched" class="alert alert-danger">Senhas não conferem</div>
         </div>
-        <div class="mb-3 form-group">
-            <label for="senhaValida" class="form-label">Confirmar Senha</label>
-            <input #inputConfirmarSenha="ngModel" type="password" class="form-control" name="senhaValida"
-                placeholder="Insira a senha novamente" [(ngModel)]="confirmarSenha" required labMMatchingPassword
-                value="" [senha]="inputSenha.value">
-            <div *ngIf="inputConfirmarSenha.errors?.['required']&&inputConfirmarSenha.touched"
-                class="alert alert-danger">Campo
-                Obrigatório</div>
-            <div *ngIf="inputConfirmarSenha.errors?.['matchingPassword']&&!inputConfirmarSenha.errors?.['required']"
-                class="alert alert-danger">Senhas não conferem</div>
-        </div>
+
+
     </div>
     <div class="d-flex justify-content-between">
         <button type="submit" class="btn btn-primary" [disabled]="!cadastroUsuario.valid">Confirmar</button>
